generator client {
  provider     = "prisma-client"
  output       = "../generated/prisma"
  moduleFormat = "cjs"
}

datasource db {
  provider = "postgresql"
}

enum Role {
  TRAINER
  TRAINEE
}

enum Gender {
  MALE
  FEMALE
}

enum ActivationStatus {
  ACTIVATED
  PENDING
}

model User {
  id               Int              @id @default(autoincrement())
  phoneNumber      String           @unique @map("phone_number")
  name             String
  role             Role
  passwordHash     String?          @map("password_hash")
  trainer          Trainer?
  trainee          Trainee?
  activationStatus ActivationStatus
  createdAt        DateTime         @default(now()) @map("created_at")
  updatedAt        DateTime         @updatedAt @map("updated_at")

  refreshTokens RefreshToken[]

  @@map("users")
}

model RefreshToken {
  id         Int       @id @default(autoincrement())
  userId     Int       @map("user_id")
  tokenHash  String    @unique @map("token_hash")
  expiresAt  DateTime  @map("expires_at")
  lastUsedAt DateTime? @map("last_used_at")
  createdAt  DateTime  @default(now()) @map("created_at")
  user       User      @relation(fields: [userId], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@map("refresh_tokens")
}

model Trainee {
  userId          Int              @id @map("user_id")
  gender          Gender
  birthDate       DateTime         @map("birth_date")
  bodyMetrics     Json             @map("body_metrics")
  trainerId       Int?             @map("trainer_id")
  user            User             @relation(fields: [userId], references: [id])
  trainer         Trainer?         @relation(fields: [trainerId], references: [userId])
  planAssignments PlanAssignment[]
  workoutLogs     WorkoutLog[]
  createdAt       DateTime         @default(now()) @map("created_at")
  updatedAt       DateTime         @updatedAt @map("updated_at")

  @@map("trainees")
}

model Trainer {
  userId                   Int                       @id @map("user_id")
  experience               String?
  bio                      String?
  user                     User                      @relation(fields: [userId], references: [id])
  planTemplates            PlanTemplate[]
  trainees                 Trainee[]
  trainerSubscriptionPlans TrainerSubscriptionPlan[]
  createdAt                DateTime                  @default(now()) @map("created_at")
  updatedAt                DateTime                  @updatedAt @map("updated_at")

  @@map("traineres")
}

enum TrainerSubscriptionPlanStatus {
  PAID
  NOT_PAID
}

model TrainerSubscriptionPlan {
  trainerId          Int
  subscriptionPlanId Int
  status             TrainerSubscriptionPlanStatus
  createdAt          DateTime                      @default(now()) @map("created_at")
  updatedAt          DateTime                      @updatedAt @map("updated_at")

  trainer          Trainer          @relation(fields: [trainerId], references: [userId])
  subscriptionPlan SubscriptionPlan @relation(fields: [subscriptionPlanId], references: [id])

  @@id([trainerId, subscriptionPlanId])
}

model SubscriptionPlan {
  id                       Int                       @id @default(autoincrement())
  name                     String
  maxTrainees              Int                       @map("max_trainees")
  price                    Decimal
  billingPeriod            String                    @map("billing_period")
  trainerSubscriptionPlans TrainerSubscriptionPlan[]
  createdAt                DateTime                  @default(now()) @map("created_at")
  updatedAt                DateTime                  @updatedAt @map("updated_at")

  @@map("trainer_subscription_plans")
}

model Exercise {
  id                       Int                       @id @default(autoincrement())
  name                     String
  instructions             String
  difficulty               String
  equipment                String[]
  illustrations            String[]
  workoutExerciseTemplates WorkoutExerciseTemplate[]
  exerciseMuscles          ExerciseMuscle[]
  createdAt                DateTime                  @default(now()) @map("created_at")
  updatedAt                DateTime                  @updatedAt @map("updated_at")

  @@map("exercises")
}

model Muscle {
  id          Int              @id @default(autoincrement())
  commonName  String           @map("common_name")
  bodyRegion  String           @map("body_region")
  diagramUrl  String           @map("diagram_url")
  description String?
  exercises   ExerciseMuscle[]

  @@map("muscles")
}

model ExerciseMuscle {
  exerciseId Int    @id @map("exercise_id")
  muscleId   Int    @map("muscle_id")
  name       String

  role     MuscleRole
  muscle   Muscle     @relation(fields: [muscleId], references: [id])
  exercise Exercise   @relation(fields: [exerciseId], references: [id])

  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  @@map("exercise_muscles")
}

enum MuscleRole {
  PRIMARY    @map("primary")
  SECONDARY  @map("secondary")
  STABILIZER @map("stabilizer")
}

enum PlanTemplateStatus {
  DRAFT
  ACTIVE
}

model PlanTemplate {
  id                    Int                @id @default(autoincrement())
  name                  String
  description           String
  status                PlanTemplateStatus
  trainerId             Int                @map("trainer_id")
  durationWeekTemplates Int                @map("duration_weekTemplates")
  isFav                 Boolean            @map("is_fav")
  createdAt             DateTime           @default(now()) @map("created_at")
  updatedAt             DateTime           @updatedAt @map("updated_at")
  trainer               Trainer            @relation(fields: [trainerId], references: [userId])
  weekTemplates         WeekTemplate[]
  planAssignments       PlanAssignment[]

  @@map("plan_templates")
}

enum PlanAssignmentStatus {
  IDLE
  ACTIVE
  COMPLETED
}

model PlanAssignment {
  id                Int                  @id @default(autoincrement())
  status            PlanAssignmentStatus
  traineeId         Int                  @map("trainee_id")
  planTemplateId    Int                  @map("plan_template_id")
  currentWeekIdx    Int                  @map("current_week_idx")
  currentWorkoutIdx Int                  @map("current_workout_idx")
  createdAt         DateTime             @default(now()) @map("created_at")
  startedAt         DateTime?            @map("started_at")
  endedAt           DateTime?            @map("ended_at")
  updatedAt         DateTime             @updatedAt @map("updated_at")
  trainee           Trainee              @relation(fields: [traineeId], references: [userId])
  planTemplate      PlanTemplate         @relation(fields: [planTemplateId], references: [id])
  workoutLogs       WorkoutLog[]

  @@map("training_plans")
}

model WeekTemplate {
  id             Int               @id @default(autoincrement())
  sequenceNumber Int               @map("sequence_number")
  planTemplateId Int               @map("plan_template_id")
  planTemplate   PlanTemplate      @relation(fields: [planTemplateId], references: [id])
  workouts       WorkoutTemplate[]
  createdAt      DateTime          @default(now()) @map("created_at")
  updatedAt      DateTime          @updatedAt @map("updated_at")

  @@map("week_templates")
}

model WorkoutTemplate {
  id                       Int                       @id @default(autoincrement())
  name                     String
  sequenceNumber           Int                       @map("sequence_number")
  durationMinutes          Int                       @map("duration_minutes")
  weekTemplateId           Int                       @map("weekTemplate_id")
  weekTemplate             WeekTemplate              @relation(fields: [weekTemplateId], references: [id])
  workoutExerciseTemplates WorkoutExerciseTemplate[]
  workoutLogs              WorkoutLog[]
  createdAt                DateTime                  @default(now()) @map("created_at")
  updatedAt                DateTime                  @updatedAt @map("updated_at")

  @@map("workouts")
}

model WorkoutExerciseTemplate {
  id                     Int             @id @default(autoincrement())
  exerciseId             Int             @map("exercise_id")
  workoutTemplateId      Int             @map("workout_id")
  sequenceNumber         Int             @map("sequence_number")
  defautlReps            String          @map("default_reps")
  defaultSets            Int             @map("default_sets")
  defaultRestTimeSeconds Int             @map("default_rest_time_seconds")
  defautlDurationMinutes Int             @map("default_duration_minutes")
  defaultWeight          Decimal         @map("default_weight")
  createdAt              DateTime        @default(now()) @map("created_at")
  updatedAt              DateTime        @updatedAt @map("updated_at")
  workout                WorkoutTemplate @relation(fields: [workoutTemplateId], references: [id])
  exercise               Exercise        @relation(fields: [exerciseId], references: [id])
  exerciseLogs           ExerciseLog[]

  @@map("workout_exercise_templates")
}

model WorkoutExerciseOverride {
  id                        Int      @id @default(autoincrement())
  planAssignmentId          Int      @map("plan_assignment_id")
  workoutExerciseTemplateId Int      @map("workout_exercise_template_id")
  weight                    Decimal?
  sets                      Int?
  reps                      String?
  restSeconds               Int?
}

model WorkoutLog {
  id                Int              @id @default(autoincrement())
  notes             String?
  status            WorkoutLogStatus @default(IN_PROGRESS) @map("status")
  workoutTemplateId Int              @map("workout_template_id")
  planAssignmentId  Int              @map("plan_assignment_id")
  createdAt         DateTime         @default(now()) @map("created_at") // session start
  updatedAt         DateTime         @updatedAt @map("updated_at")
  endedAt           DateTime?        @map("ended_at")

  workoutTemplate WorkoutTemplate @relation(fields: [workoutTemplateId], references: [id])
  planAssignment  PlanAssignment  @relation(fields: [planAssignmentId], references: [id])
  exerciseLogs    ExerciseLog[]
  trainee         Trainee?        @relation(fields: [traineeUserId], references: [userId])
  traineeUserId   Int?

  @@map("workout_logs")
}

enum WorkoutLogStatus {
  IN_PROGRESS
  COMPLETED
  ABANDONED
}

model ExerciseLog {
  id                        Int    @id @default(autoincrement())
  status                    String
  workoutLogId              Int    @map("workout_log_id")
  workoutExerciseTemplateId Int    @map("workout_exercise_template_id")

  expectedSets            Int     @map("expected_sets")
  expectedReps            String  @map("expected_reps")
  expectedWeight          Decimal @map("expected_weight")
  expectedRestTimeSeconds Int?    @map("expected_rest_time_seconds")

  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  endedAt   DateTime? @map("ended_at")

  workoutLog              WorkoutLog              @relation(fields: [workoutLogId], references: [id])
  workoutExerciseTemplate WorkoutExerciseTemplate @relation(fields: [workoutExerciseTemplateId], references: [id])
  setLogs                 SetLog[]

  @@map("exercise_logs")
}

model SetLog {
  id            Int         @id @default(autoincrement())
  reps          String
  weight        Decimal
  exerciseLogId Int         @map("exercise_log_id")
  exerciseLog   ExerciseLog @relation(fields: [exerciseLogId], references: [id])
  createdAt     DateTime    @default(now()) @map("created_at")
  updatedAt     DateTime    @updatedAt @map("updated_at")
  endedAt       DateTime?   @map("ended_at")

  @@map("set_logs")
}
